--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.16",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.5.0",
